test/expressions/if-expr/use-before-def.good
use-before-def.chpl:4: In function 'main':
use-before-def.chpl:5: error: 'a' is used to define itself
use-before-def.chpl:5: error: 'a' is used to define itself
use-before-def.chpl:6: error: 'b' is used to define itself
use-before-def.chpl:6: error: 'b' is used to define itself
use-before-def.chpl:7: error: statement references a variable before it is defined
use-before-def.chpl:7: error: statement references a variable before it is defined
